--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+
 @font-face {
   font-family: "poppins";
   src: url("./fonts/poppins/Poppins-Regular.ttf") format(opentype);
